# Weekly_Report

backend/: .gitignore  README.md  SETUP.md  pyproject.toml  requirements.txt
backend/alembic/: alembic.ini  env.py
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/v1/: api.py
backend/app/api/v1/endpoints/: weekly_reports.py
backend/app/core/: database.py  exceptions.py  security.py
backend/app/crud/: weekly_report.py
backend/app/models/: weekly_report.py
backend/app/schemas/: weekly_report.py
backend/app/services/: weekly_report_service.py
backend/tests/: conftest.py  test_weekly_reports.py
frontend/: package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: AddNotePage.tsx  ConfirmDialog.tsx  EditDialog.tsx  HomePage.tsx  ReportPage.tsx  Toast.tsx
frontend/lib/: api.ts  exports.ts
frontend/types/: index.ts
